package design.facade;

/**
 * 电脑CPU相关类.
 *
 * @author Mr.Jin
 * @version 1.0 V 2019-07-15
 */
public class Cpu {

    public void start() {
        System.out.println("CPU start");
    }

    public void end() {
        System.out.println("CPU end");
    }
}
