package design.facade;

/**
 * 电脑磁盘类.
 *
 * @author Mr.Jin
 * @version 1.0 V 2019-07-15
 */
public class Disk {

    public void start() {
        System.out.println("Disk start");
    }

    public void end() {
        System.out.println("Disk end");
    }
}
