package design.facade;

/**
 * 电脑内存类.
 *
 * @author Mr.Jin
 * @version 1.0 V 2019-07-15
 */
public class Memory {

    public void start() {
        System.out.println("Memory start");
    }

    public void end() {
        System.out.println("Memory end");
    }
}
