@startuml
skinparam classAttributeIconSize 0

package "class Facade(外观模式)" #DDDDDD {
    class Computer
    {
        -Cpu cpu;
        -Disk disk;
        -Memory memory;
        +Computer();
        +start();
        +end();
    }
    note right: 电脑(门面类)

    class Cpu
    {
        +start();
        +end();
    }
    note right: CPU(结构)

    class Disk
    {
        +start();
        +end();
    }
    note right: Disk(结构)

    class Memory
    {
        +start();
        +end();
    }
    note right: Memory(结构)

    Computer --> Cpu: 关联
    Computer --> Disk: 关联
    Computer --> Memory: 关联
}
note as N1
  定义: 提供一个统一的接口去访问多个子系统不通的接口, 为子系统一组接口
  提供一个统一的高层接口调用,使子系统更加容易使用.

  优点:   1. 不限制所关联的类.\,可以提升易用性和通用性

  缺点:   1. 不符合开闭原则,开闭原则:对扩展开放, 对修改关闭.
end note
@enduml
